# chromium-android-browser

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  BUILD.gn  DEPS  LICENSE  README.md
.ci-scripts/: run_automated_module_testing.py  run_chromium_tests.py  run_perf_tests.sh  s3_get_presigned_url.py  s3_upload_files.py  setup_emulators.sh  update_badges.py
.circleci/: config.yml
.github/workflows/: pr_agent.yml
.tx/: config  integration_config.yml  release_notes_integration_config.yml
android_webview/: BUILD.gn
android_webview/browser/: BUILD.gn  aw_browser_context.cc  aw_browser_context.h  aw_browser_main_parts.cc  aw_contents.cc  aw_contents.h  aw_feature_list_creator.cc  aw_settings.cc  aw_settings.h
android_webview/lib/: aw_main_delegate.cc
android_webview/test/: BUILD.gn
android_webview/ui/: grit_resources_allowlist.txt
base/android/: content_uri_utils.cc  content_uri_utils.h
base/threading/: thread_restrictions.h
base/trace_event/: builtin_categories.h
chrome/: chrome_paks.gni
chrome/android/: BUILD.gn  chrome_java_sources.gni  chrome_public_apk_tmpl.gni
chrome/android/ecosia/: ecosia_java_resources.gni  ecosia_java_sources.gni  ecosia_junit_test_java_sources.gni
chrome/app/: chrome_main_delegate.cc  chromium_strings.grd  google_chrome_strings.grd
chrome/browser/: BUILD.gn  about_flags.cc  browser_resources.grd  chrome_browser_interface_binders.cc  chrome_browser_main.cc  flag-metadata.json  flag-never-expire-list.json  flag_descriptions.cc  flag_descriptions.h
chrome/browser/adblock/android/: BUILD.gn
chrome/browser/adblock/android/java/src/org/chromium/chrome/browser/adblock/settings/: AdblockFilterListsAdapter.java  AdblockSettingsFragment.java  EcosiaAdblockPreferences.java  EcosiaAdblockSharedPreferencesHelpers.java  EcosiaAdblockTrackingManager.java
chrome/browser/adblock/android/javatests/src/org/chromium/chrome/browser/adblock/: AdblockControllerTest.java  AdblockFilterFragmentTest.java  AdblockPopupInfoBarTest.java  AdblockPopupMessageTest.java  FilteringConfigurationTest.java  ResourceClassificationNotifierTest.java  TestPagesCircumventionTest.java  TestPagesCspTest.java  TestPagesElemhideEmuInvTest.java  TestPagesElemhideEmuTest.java  TestPagesElemhideTest.java  TestPagesExceptionTest.java  TestPagesFilterTest.java  TestPagesHeaderFilterTest.java  TestPagesHelper.java  TestPagesRewriteTest.java  TestPagesServiceWorkersTest.java  TestPagesSiteKeyTest.java  TestPagesSnippetsTest.java  TestPagesWebsocketTest.java
chrome/browser/ui/android/default_browser_promo/: BUILD.gn
chrome/browser/ui/android/default_browser_promo/java/res/drawable/: default_browser_promo_bg.xml  promo_dialog_background.xml
chrome/browser/ui/android/default_browser_promo/java/res_ecosia/drawable/: ecosia_button_primary.xml
chrome/browser/ui/android/default_browser_promo/java/res_ecosia/layout/: ecosia_promo_dialog_layout.xml
chrome/browser/ui/android/default_browser_promo/java/src/org/chromium/chrome/browser/ui/default_browser_promo/: DefaultBrowserPromoDeps.java  DefaultBrowserPromoDepsTest.java  DefaultBrowserPromoManager.java  DefaultBrowserPromoManagerTest.java  DefaultBrowserPromoMetrics.java  DefaultBrowserPromoUtils.java  DefaultBrowserPromoUtilsTest.java  EcosiaDefaultBrowserPromoDialog.java
chrome/common/: BUILD.gn  webui_url_constants.cc  webui_url_constants.h
chrome/test/: BUILD.gn
chrome/utility/: BUILD.gn
components/: BUILD.gn  components_chromium_strings.grd  components_google_chrome_strings.grd  components_strings.grd  error_page_strings.grdp  new_or_sad_tab_strings.grdp  page_info_strings.grdp
components/adblock/: CHANGELOG.md  features.gni
components/adblock/android/: BUILD.gn  adblock_jni.cc  adblock_jni.h  filtering_configuration_android.cc  filtering_configuration_bindings.cc  filtering_configuration_bindings.h  java_bindings_getters.h  resource_classification_notifier_android.cc  resource_classification_notifier_bindings.cc  resource_classification_notifier_bindings.h
components/adblock/android/java/res/layout/: adblock_custom_item_settings.xml  adblock_filter_lists_list_item.xml
components/adblock/android/java/res/xml/: adblock_preferences.xml
components/adblock/android/java/src/org/chromium/components/adblock/: AdblockContentType.java  AdblockController.java  AdblockCounters.java  FilteringConfiguration.java  ResourceClassificationNotifier.java  ResourceFilteringCounters.java
components/adblock/android/java/src/org/chromium/components/adblock/settings/: AdblockCustomFilterListsFragment.java  AdblockFilterListsAdapter.java  AdblockSettingsFragment.java  EcosiaAdblockPreferences.java  EcosiaAdblockSharedPreferencesHelpers.java  EcosiaAdblockTrackingManager.java
components/adblock/android/javatests/src/org/chromium/components/adblock/: AdblockControllerTestBase.java  DefaultSettingsTestBase.java  FilteringConfigurationTestBase.java  TestAdBlockedObserver.java  TestPagesCircumventionTestBase.java  TestPagesCspTestBase.java  TestPagesElemhideEmuInvTestBase.java  TestPagesElemhideEmuTestBase.java  TestPagesElemhideTestBase.java  TestPagesExceptionTestBase.java  TestPagesFilterTestBase.java  TestPagesHeaderFilterTestBase.java  TestPagesHelperBase.java  TestPagesRewriteTestBase.java  TestPagesSiteKeyTestBase.java  TestPagesSnippetsTestBase.java  TestPagesWebsocketTestBase.java  TestResourceFilteringObserver.java  TestVerificationUtils.java
components/adblock/core/resources/: BUILD.gn  adblock_resources.grd
components/component_updater/: component_updater_url_constants.cc  (+2 more)
fastlane/: Fastfile
gclient/: .gclient  .gclient_ci_android  .gclient_ci_linux  .gclient_ci_mac  .gclient_ci_windows
scripts/: .gclient  .gclient_entries  AdblockplusIntegration.md  ChromiumMigrationGuide.md  README.md  build.sh  bundle_arm64_aab.sh  bundle_arm64_artefacts_for_tag.sh  bundle_non_arm64_artefacts_for_tag.sh  clean_appcenter.sh  figma_export_tool.py  getThirdParties.sh  mostRecentTagForVersion.sh  prepare_build_folders.sh  prepare_release_folders_from_tag.sh  replace_google_strings.py  sign_artefact_for_tag_and_arch.sh
(+1440 files in other folders)
