ecosia_java_sources = [
  "java/src/org/ecosia/adblock/AdblockButton.java",
  "java/src/org/ecosia/adblock/AdblockPopupWindow.java",
  "java/src/org/ecosia/adblock/AdblockSettingsActivity.java",
  "java/src/org/ecosia/adblock/AdblockSwitchTranslucentOverlay.java",
  "java/src/org/ecosia/cookies/EcosiaCookieObserver.java",
  "java/src/org/ecosia/cookies/ECFGCookie.java",
  "java/src/org/ecosia/defaultbrowser/DefaultBrowserActionReceiver.java",
  "java/src/org/ecosia/defaultbrowser/WhatsNewPopup.java",
  "java/src/org/ecosia/dummy/EcosiaDummyActivity.java",
  "java/src/org/ecosia/firstrun/EcosiaFirstRunView.java",
  "java/src/org/ecosia/firstrun/EcosiaFirstRunActivity.java",
  "java/src/org/ecosia/firstrun/EcosiaFirstRunAdapter.java",
  "java/src/org/ecosia/firstrun/EcosiaFirstRunPageFragment.java",
  "java/src/org/ecosia/incentives/LocaleWrapper.java",
  "java/src/org/ecosia/incentives/LocaleWrapperProvider.java",
  "java/src/org/ecosia/incentives/SearchIncentivesManager.java",
  "java/src/org/ecosia/mmp/Singular.java",
  "java/src/org/ecosia/ntp/AboutSection.java",
  "java/src/org/ecosia/ntp/EcosiaNewTabPage.java",
  "java/src/org/ecosia/ntp/EcosiaNewTabPageView.java",
  "java/src/org/ecosia/ntp/EcosiaNewTabPageRecyclerViewAdapter.java",
  "java/src/org/ecosia/ntp/EcosiaAboutRecyclerViewAdapter.java",
  "java/src/org/ecosia/ntp/EcosiaStatisticsManager.java",
  "java/src/org/ecosia/ntp/InvestmentsAmount.java",
  "java/src/org/ecosia/ntp/News.java",
  "java/src/org/ecosia/ntp/NewsManager.java",
  "java/src/org/ecosia/ntp/TotalTreeCounter.java",
  "java/src/org/ecosia/ntp/TreeCounterProgressbar.java",
  "java/src/org/ecosia/ntp/YourImpactTooltip.java",
  "java/src/org/ecosia/ntp/cards/Card.java",
  "java/src/org/ecosia/ntp/cards/CardPosition.java",
  "java/src/org/ecosia/ntp/cards/GlobalImpactCardView.java",
  "java/src/org/ecosia/ntp/cards/ImpactCardContainer.java",
  "java/src/org/ecosia/ntp/cards/NewsCard.java",
  "java/src/org/ecosia/ntp/cards/PersonalImpactCardView.java",
  "java/src/org/ecosia/preferences/EcosiaAboutPreferences.java",
  "java/src/org/ecosia/preferences/EcosiaLegalInformationPreferences.java",
  "java/src/org/ecosia/toolbar/EcosiaToolbarPhone.java",
  "java/src/org/ecosia/toolbar/EcosiaToolbarTablet.java",
  "java/src/org/ecosia/tracking/TrackingManager.java",
  "java/src/org/ecosia/tracking/TrackingDateHolder.java",
  "java/src/org/ecosia/searchwidget/EcosiaSearchActivity.java",
  "java/src/org/ecosia/searchwidget/EcosiaSearchActivityExtensionImplementation.java",
  "java/src/org/ecosia/searchwidget/EcosiaSearchActivityExtension.java",
  "java/src/org/ecosia/searchwidget/EcosiaWidgetProvider.java",
  "java/src/org/ecosia/utils/BuildInfoProvider.java",
  "java/src/org/ecosia/utils/BuildInfoProviderImplementation.java",
  "java/src/org/ecosia/utils/DownloadImageTask.java",
  "java/src/org/ecosia/utils/EcosiaHelpUrlParams.java",
  "java/src/org/ecosia/utils/Logger.java",
  "java/src/org/ecosia/utils/LoggerImplementation.java",
  "java/src/org/ecosia/utils/LongTitleSwitchPreference.java",
  "java/src/org/ecosia/utils/NetworkStateProvider.java",
  "java/src/org/ecosia/utils/NetworkStateProviderImplementation.java",
  "java/src/org/ecosia/utils/Requests.java",
  "java/src/org/ecosia/utils/RetrieveDataTask.java",
  "java/src/org/ecosia/utils/RetrieveDelegate.java",
  "java/src/org/ecosia/utils/SettingsHelpers.java",
  "java/src/org/ecosia/utils/SharedPreferencesHelpers.java",
  "java/src/org/ecosia/utils/StorageHelpers.java",
  "java/src/org/ecosia/utils/TimestampHelpers.java",
  "java/src/org/ecosia/utils/UrlHelpers.java",
  "java/src/org/ecosia/utils/TimestampProvider.java",
  "java/src/org/ecosia/utils/TimestampProviderImplementation.java",
  "java/src/org/ecosia/utils/UserHelper.java",
  "java/src/org/ecosia/unleash/IUnleash.java",
  "java/src/org/ecosia/unleash/Unleash.java",
  "java/src/org/ecosia/unleash/Toggle.java",
  "java/src/org/ecosia/unleash/UnleashCallback.java",
]
