ecosia_junit_test_java_sources = [
  "junit/src/org/chromium/chrome/browser/ntp/RecentTabsManagerModificationsUnitTest.java",
  "junit/src/org/ecosia/dummy/EcosiaDummyActivityUnitTest.java",
  "junit/src/org/ecosia/firstrun/EcosiaFirstRunIntegrationUnitTest.java",
  "junit/src/org/ecosia/ntp/EcosiaNewTabPageTest.java",
  "junit/src/org/ecosia/ntp/EcosiaStatisticsTest.java",
  "junit/src/org/ecosia/searchwidget/EcosiaSearchActivityExtensionUnitTest.java",
  "junit/src/org/ecosia/tracking/TrackingTest.java",
  "junit/src/org/ecosia/tracking/TrackingDateHolderUnitTest.java",
  "junit/src/org/ecosia/utils/UrlHelpersTest.java",
  "junit/src/org/ecosia/utils/SettingsHelpersTest.java",
]

# These dependencies are here to minimize our changes in BUILD.gn, but perhaps they should live in BUILD.gn, unsure.
# TODO: we are probably not going to need them all.. we certainly aren't using them all yet.
ecosia_junit_test_deps = [
      ":base_module_java",
      ":chrome_app_java_resources",
      ":chrome_java",
      ":chrome_jni_headers",
      ":chrome_public_android_manifest",
      ":delegate_public_impl_java",
      "//base:base_java_test_support",
      "//base:base_junit_test_support",
      "//base/test:test_support_java",
      "//build/config/android/test/classpath_order:junit_tests",
      "//cc:cc_java",
      "//chrome/android:update_proto_java",
      "//chrome/android:usage_stats_proto_java",
      "//chrome/android/features/android_library_factory:junit_tests",
      "//chrome/android/features/keyboard_accessory:internal_java",
      "//chrome/android/features/start_surface:java_resources",
      "//chrome/android/features/start_surface:public_java",
      "//chrome/android/features/tab_ui:java",
      "//chrome/android/features/tab_ui:tab_suggestions_java",
      "//chrome/android/features/tab_ui/public:java",
      "//chrome/android/modules/image_editor/provider:java",
      "//chrome/android/webapk/libs/client:client_java",
      "//chrome/android/webapk/libs/common:common_java",
      "//chrome/android/webapk/libs/common:splash_java",
      "//chrome/android/webapk/test:junit_test_support",
      "//chrome/browser/android/browserservices/constants:java",
      "//chrome/browser/android/browserservices/intents:java",
      "//chrome/browser/android/browserservices/intents:junit",
      "//chrome/browser/android/browserservices/metrics:java",
      "//chrome/browser/android/browserservices/verification:java",
      "//chrome/browser/android/browserservices/verification:junit_test_support",
      "//chrome/browser/android/crypto:java",
      "//chrome/browser/android/customtabs/branding:junit",
      "//chrome/browser/android/httpclient:junit_tests",
      "//chrome/browser/android/lifecycle:java",
      "//chrome/browser/autofill/android:java",
      "//chrome/browser/back_press/android:java",
      "//chrome/browser/back_press/android:junit",
      "//chrome/browser/banners/android:java",
      "//chrome/browser/bluetooth/android:junit",
      "//chrome/browser/browser_controls/android:java",
      "//chrome/browser/browser_controls/android:junit",
      "//chrome/browser/commerce/android:java",
      "//chrome/browser/commerce/merchant_viewer/android:junit",
      "//chrome/browser/commerce/price_tracking/android:java",
      "//chrome/browser/commerce/price_tracking/proto:proto_java",
      "//chrome/browser/commerce/subscriptions/android:subscriptions_java",
      "//chrome/browser/contextmenu:java",
      "//chrome/browser/creator/android:java",
      "//chrome/browser/creator/android:junit",
      "//chrome/browser/dependency_injection:java",
      "//chrome/browser/device:java",
      "//chrome/browser/device:junit",
      "//chrome/browser/device_reauth/android:java",
      "//chrome/browser/download/android:java",
      "//chrome/browser/download/android:junit_tests",
      "//chrome/browser/download/internal/android:junit",
      "//chrome/browser/endpoint_fetcher:java",
      "//chrome/browser/enterprise/util:java",
      "//chrome/browser/enterprise/util:junit",
      "//chrome/browser/feature_engagement:java",
      "//chrome/browser/feed/android:java",
      "//chrome/browser/feed/android:junit",
      "//chrome/browser/feedback/android:java",
      "//chrome/browser/first_run/android:java",
      "//chrome/browser/flags:flags_junit_tests",
      "//chrome/browser/flags:java",
      "//chrome/browser/fullscreen/android:java",
      "//chrome/browser/gsa:java",
      "//chrome/browser/history_clusters:java",
      "//chrome/browser/image_descriptions:java",
      "//chrome/browser/image_editor/public:java",
      "//chrome/browser/incognito:incognito_junit_tests",
      "//chrome/browser/incognito:java",
      "//chrome/browser/language/android:junit",
      "//chrome/browser/lens:delegate_public_impl_java",
      "//chrome/browser/lens:java",
      "//chrome/browser/loading_modal/android:junit",
      "//chrome/browser/locale:java",
      "//chrome/browser/notifications:java",
      "//chrome/browser/notifications:junit_tests",
      "//chrome/browser/omaha/android:java",
      "//chrome/browser/optimization_guide/android:java",
      "//chrome/browser/page_annotations/test/android:junit",
      "//chrome/browser/partnercustomizations:java",
      "//chrome/browser/password_edit_dialog/android:junit",
      "//chrome/browser/password_entry_edit/android/internal:junit",
      "//chrome/browser/password_manager/android:java",
      "//chrome/browser/payments/android:junit",
      "//chrome/browser/policy/android:java",
      "//chrome/browser/policy/android:junit",
      "//chrome/browser/preferences:java",
      "//chrome/browser/preferences:preferences_junit_tests",
      "//chrome/browser/privacy_guide/android:java",
      "//chrome/browser/privacy_guide/android:junit",
      "//chrome/browser/profiles/android:java",
      "//chrome/browser/safety_check/android:java",
      "//chrome/browser/safety_check/android:junit",
      "//chrome/browser/search_engines/android:java",
      "//chrome/browser/search_resumption:junit",
      "//chrome/browser/segmentation_platform:factory_java",
      "//chrome/browser/settings:junit_test_support",
      "//chrome/browser/share:java",
      "//chrome/browser/signin/services/android:java",
      "//chrome/browser/signin/services/android:junit",
      "//chrome/browser/sync/android:java",
      "//chrome/browser/tab:java",
      "//chrome/browser/tab:junit",
      "//chrome/browser/tab_group:java",
      "//chrome/browser/tab_group:junit",
      "//chrome/browser/tabmodel:factory_java",
      "//chrome/browser/tabmodel:java",
      "//chrome/browser/tabmodel:junit",
      "//chrome/browser/tabmodel/internal:java",
      "//chrome/browser/tabpersistence:junit",
      "//chrome/browser/thumbnail:java",
      "//chrome/browser/touch_to_fill/payments/android/internal:junit",
      "//chrome/browser/ui/android/appmenu:java",
      "//chrome/browser/ui/android/appmenu/internal:junit",
      "//chrome/browser/ui/android/autofill/internal:junit",
      "//chrome/browser/ui/android/default_browser_promo:java",
      "//chrome/browser/ui/android/default_browser_promo:junit",
      "//chrome/browser/ui/android/fast_checkout/internal:junit",
      "//chrome/browser/ui/android/favicon:java",
      "//chrome/browser/ui/android/layouts:java",
      "//chrome/browser/ui/android/layouts:junit",
      "//chrome/browser/ui/android/logo:java",
      "//chrome/browser/ui/android/logo:junit",
      "//chrome/browser/ui/android/multiwindow:java",
      "//chrome/browser/ui/android/multiwindow:junit",
      "//chrome/browser/ui/android/native_page:java",
      "//chrome/browser/ui/android/native_page:junit",
      "//chrome/browser/ui/android/night_mode:java",
      "//chrome/browser/ui/android/night_mode:junit",
      "//chrome/browser/ui/android/omnibox:java",
      "//chrome/browser/ui/android/omnibox:junit",
      "//chrome/browser/ui/android/quickactionsearchwidget:java",
      "//chrome/browser/ui/android/searchactivityutils:java",
      "//chrome/browser/ui/android/signin:java",
      "//chrome/browser/ui/android/signin:junit",
      "//chrome/browser/ui/android/theme:java",
      "//chrome/browser/ui/android/toolbar:java",
      "//chrome/browser/ui/android/toolbar:junit",
      "//chrome/browser/ui/android/webid/internal:junit",
      "//chrome/browser/ui/messages/android:java",
      "//chrome/browser/ui/messages/android:junit",
      "//chrome/browser/uid/android:java",
      "//chrome/browser/uid/android:junit",
      "//chrome/browser/usb/android:junit",
      "//chrome/browser/user_education:java",
      "//chrome/browser/util:java",
      "//chrome/browser/util:junit_tests",
      "//chrome/browser/version:java",
      "//chrome/browser/video_tutorials:factory_java",
      "//chrome/browser/video_tutorials:java",
      "//chrome/browser/video_tutorials:test_support_java",
      "//chrome/browser/video_tutorials/internal:junit",
      "//chrome/browser/webapps/android:java",
      "//chrome/browser/xsurface:java",
      "//chrome/test:sync_integration_test_support_java",
      "//chrome/test/android:chrome_java_unit_test_support",
      "//components/autofill/android:main_autofill_java",
      "//components/background_task_scheduler:background_task_scheduler_java",
      "//components/background_task_scheduler:background_task_scheduler_task_ids_java",
      "//components/bookmarks/common/android:bookmarks_java",
      "//components/browser_ui/accessibility/android:java",
      "//components/browser_ui/accessibility/android:junit",
      "//components/browser_ui/bottomsheet/android:java",
      "//components/browser_ui/display_cutout/android:java",
      "//components/browser_ui/media/android:java",
      "//components/browser_ui/media/android:java_resources",
      "//components/browser_ui/notifications/android:java",
      "//components/browser_ui/settings/android:java",
      "//components/browser_ui/share/android:java",
      "//components/browser_ui/site_settings/android:constants_java",
      "//components/browser_ui/site_settings/android:java",
      "//components/browser_ui/site_settings/android:junit",
      "//components/browser_ui/styles/android:java",
      "//components/browser_ui/test/android:test_support_java",
      "//components/browser_ui/util/android:java",
      "//components/browser_ui/widget/android:java",
      "//components/browser_ui/widget/android:test_support_java",
      "//components/commerce/core:proto_java",
      "//components/commerce/core/android:core_java",
      "//components/content_capture/android:java",
      "//components/content_settings/android:content_settings_enums_java",
      "//components/digital_asset_links/android:java",
      "//components/digital_asset_links/android:junit_test_support",
      "//components/digital_goods/mojom:mojom_java",
      "//components/dom_distiller/core/android:dom_distiller_core_java",
      "//components/embedder_support/android:content_view_java",
      "//components/embedder_support/android:context_menu_java",
      "//components/embedder_support/android:junit_test_support",
      "//components/embedder_support/android:util_java",
      "//components/externalauth/android:java",
      "//components/externalauth/android:junit",
      "//components/favicon/android:java",
      "//components/feature_engagement/public:public_java",
      "//components/feed/core/proto:proto_java_v2",
      "//components/feed/core/v2:feedv2_core_java",
      "//components/image_fetcher:java",
      "//components/infobars/android:java",
      "//components/messages/android:java",
      "//components/messages/android:manager_java",
      "//components/minidump_uploader:minidump_uploader_java",
      "//components/minidump_uploader:minidump_uploader_java_test_support",
      "//components/minidump_uploader:minidump_uploader_javatests",
      "//components/module_installer/android:module_installer_java",
      "//components/offline_items_collection/core:core_java",
      "//components/omnibox/browser:browser_java",
      "//components/omnibox/browser:junit",
      "//components/optimization_guide/proto:optimization_guide_proto_java",
      "//components/page_info/android:java",
      "//components/page_info/core:proto_java",
      "//components/paint_preview/player/android:java",
      "//components/payments/content/android:java",
      "//components/payments/content/android:service_java",
      "//components/payments/mojom:mojom_java",
      "//components/policy/android:policy_java",
      "//components/power_bookmarks/core:proto_java",
      "//components/prefs/android:java",
      "//components/profile_metrics:browser_profile_type_enum_java",
      "//components/schema_org/common:mojom_java",
      "//components/search_engines/android:java",
      "//components/security_state/content/android:java",
      "//components/security_state/core:security_state_enums_java",
      "//components/segmentation_platform/public:public_java",
      "//components/signin/core/browser:signin_enums_java",
      "//components/signin/public/android:java",
      "//components/signin/public/android:signin_java_test_support",
      "//components/sync/android:sync_java",
      "//components/sync_device_info:sync_device_info_java",
      "//components/translate/content/android:junit",
      "//components/ukm/android:java",
      "//components/url_formatter/android:url_formatter_java",
      "//components/user_prefs/android:java",
      "//components/variations/android:variations_java",
      "//components/version_info/android:version_constants_java",
      "//components/webapk/android/libs/client:java",
      "//components/webapk/android/libs/common:java",
      "//components/webapps/browser/android:java",
      "//content/public/android:content_java",
      "//content/public/common:common_java",
      "//content/public/test/android:content_java_test_support",
      "//mojo/public/java:bindings_java",
      "//mojo/public/java:system_java",
      "//mojo/public/mojom/base:base_java",
      "//net/android:net_java",
      "//services/device/public/mojom:mojom_java",
      "//services/media_session/public/cpp/android:media_session_java",
      "//services/media_session/public/mojom:mojom_java",
      "//services/service_manager/public/java:service_manager_java",
      "//third_party/android_deps:chromium_play_services_availability_shadows_java",
      "//third_party/android_deps:com_google_guava_listenablefuture_java",
      "//third_party/android_deps:com_googlecode_java_diff_utils_diffutils_java",
      "//third_party/android_deps:dagger_java",
      "//third_party/android_deps:espresso_java",
      "//third_party/android_deps:guava_android_java",
      "//third_party/android_deps:material_design_java",
      "//third_party/android_deps:protobuf_lite_runtime_java",
      "//third_party/android_support_test_runner:rules_java",
      "//third_party/android_support_test_runner:runner_java",
      "//third_party/androidx:androidx_activity_activity_java",
      "//third_party/androidx:androidx_appcompat_appcompat_java",
      "//third_party/androidx:androidx_browser_browser_java",
      "//third_party/androidx:androidx_collection_collection_java",
      "//third_party/androidx:androidx_lifecycle_lifecycle_runtime_java",
      "//third_party/androidx:androidx_mediarouter_mediarouter_java",
      "//third_party/androidx:androidx_swiperefreshlayout_swiperefreshlayout_java",
      "//third_party/androidx:androidx_test_core_java",
      "//third_party/androidx:androidx_test_ext_junit_java",
      "//third_party/androidx:androidx_test_runner_java",
      "//third_party/blink/public:blink_headers_java",
      "//third_party/blink/public/mojom:android_mojo_bindings_java",
      "//third_party/blink/public/mojom:mojom_core_java",
      "//third_party/blink/public/mojom:mojom_platform_java",
      "//third_party/gif_player:gif_player_java",
      "//third_party/google-truth:google_truth_java",
      "//third_party/hamcrest:hamcrest_java",
      "//ui/android:ui_java",
      "//ui/android:ui_java_test_support",
      "//ui/android:ui_junit_test_support",
      "//ui/base/ime/mojom:mojom_java",
      "//ui/base/mojom:mojom_java",
      "//url:gurl_java",
      "//url:gurl_junit_shadows",
      "//url:gurl_junit_test_support",
      "//url:gurl_junit_tests",
      "//url:origin_java",
      "//url/mojom:url_mojom_gurl_java",  ]
