ecosia_junit_test_java_sources = [
  "junit/src/org/chromium/chrome/browser/ntp/RecentTabsManagerModificationsUnitTest.java",
  "junit/src/org/ecosia/dummy/EcosiaDummyActivityUnitTest.java",
  "junit/src/org/ecosia/firstrun/EcosiaFirstRunIntegrationUnitTest.java",
  "junit/src/org/ecosia/ntp/EcosiaStatisticsTest.java",
  "junit/src/org/ecosia/ntp/TotalTreeCounterUnitTest.java",
  "junit/src/org/ecosia/searchwidget/EcosiaSearchActivityExtensionUnitTest.java",
  "junit/src/org/ecosia/tracking/TrackingTest.java",
  "junit/src/org/ecosia/utils/DateHolderUnitTest.java",
  "junit/src/org/ecosia/utils/UrlHelpersTest.java",
  "junit/src/org/ecosia/utils/SettingsHelpersTest.java",
]

# These dependencies are here to minimize our changes in BUILD.gn, but perhaps they should live in BUILD.gn, unsure.
# TODO: we are probably not going to need them all.. we certainly aren't using them all yet.
ecosia_junit_test_deps = [
      ":base_module_java",
      ":chrome_app_java_resources",
      ":chrome_java",
      ":chrome_jni_headers",
      ":chrome_unit_test_util_java",
      "//base:base_java_test_support",
      "//base:base_java_test_support_uncommon",
      "//base:base_junit_test_support",
      "//base/test:test_support_java",
      "//base/version_info/android:version_constants_java",
      "//cc:cc_java",
      "//cc/mojom:mojom_java",
      "//chrome/android:usage_stats_proto_java",
      "//chrome/android/features/android_library_factory:junit_tests",
      "//chrome/android/features/keyboard_accessory:internal_java",
      "//chrome/android/webapk/test:junit_test_support",
      "//chrome/browser/contextmenu:java",
      "//chrome/browser/creator/android:java",
      "//chrome/browser/creator/android:junit",
      "//chrome/browser/dependency_injection:java",
      "//chrome/browser/util:java",
      "//chrome/browser/util:junit_tests",
      "//chrome/browser/version:java",
      "//chrome/browser/xsurface:java",
      "//chrome/browser/xsurface_provider:junit",
      "//chrome/test:sync_integration_test_support_java",
      "//chrome/test/android:chrome_java_unit_test_support",
      "//components/webapk/android/libs/client:java",
      "//components/webapk/android/libs/common:java",
      "//components/webapps/browser/android:java",
      "//components/webauthn/android:java",
      "//components/webauthn/android:test_support_java",
      "//content/public/android:content_java",
      "//content/public/common:common_java",
      "//content/public/test/android:content_java_test_support",
      "//mojo/public/java:bindings_java",
      "//mojo/public/java:system_java",
      "//mojo/public/mojom/base:base_java",
      "//net/android:net_java",
      "//services/device/public/java:device_feature_list_java",
      "//services/device/public/mojom:mojom_java",
      "//services/media_session/public/cpp/android:media_session_java",
      "//services/media_session/public/mojom:mojom_java",
      "//services/service_manager/public/java:service_manager_java",
      "//third_party/android_deps:chromium_play_services_availability_shadows_java",
      "//third_party/android_deps:com_googlecode_java_diff_utils_diffutils_java",
      "//third_party/android_deps:dagger_java",
      "//third_party/android_deps:espresso_java",
      "//third_party/android_deps:guava_android_java",
      "//third_party/android_deps:material_design_java",
      "//third_party/android_deps:protobuf_lite_runtime_java",
      "//third_party/androidx:androidx_activity_activity_java",
      "//third_party/androidx:androidx_appcompat_appcompat_java",
      "//third_party/androidx:androidx_browser_browser_java",
      "//third_party/androidx:androidx_collection_collection_java",
      "//third_party/androidx:androidx_coordinatorlayout_coordinatorlayout_java",
      "//third_party/androidx:androidx_lifecycle_lifecycle_runtime_java",
      "//third_party/androidx:androidx_mediarouter_mediarouter_java",
      "//third_party/androidx:androidx_preference_preference_java",
      "//third_party/androidx:androidx_swiperefreshlayout_swiperefreshlayout_java",
      "//third_party/androidx:androidx_test_core_java",
      "//third_party/androidx:androidx_test_ext_junit_java",
      "//third_party/blink/public:blink_headers_java",
      "//third_party/blink/public/mojom:android_mojo_bindings_java",
      "//third_party/blink/public/mojom:mojom_core_java",
      "//third_party/blink/public/mojom:mojom_platform_java",
      "//third_party/gif_player:gif_player_java",
      "//third_party/google-truth:google_truth_java",
      "//third_party/hamcrest:hamcrest_java",
      "//ui/accessibility:ax_base_java",
      "//ui/android:ui_java",
      "//ui/android:ui_java_test_support",
      "//ui/android:ui_junit_test_support",
      "//ui/base/ime/mojom:mojom_java",
      "//ui/base/mojom:mojom_java",
      "//url:gurl_java",
      "//url:gurl_junit_test_support",
      "//url/mojom:url_mojom_gurl_java",
      "//url/mojom:url_mojom_origin_java",
]