# This file is part of eyeo Chromium SDK,
# Copyright (C) 2006-present eyeo GmbH
# eyeo Chromium SDK is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License version 3 as
# published by the Free Software Foundation.
# eyeo Chromium SDK is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# You should have received a copy of the GNU General Public License
# along with eyeo Chromium SDK.  If not, see <http://www.gnu.org/licenses/>.

import("//build/config/android/rules.gni")
import("//build/config/locales.gni")
import("//third_party/jni_zero/jni_zero.gni")
import("//tools/grit/grit_rule.gni")

source_set("java_bindings") {
  sources = [
    "adblock_jni.cc",
    "adblock_jni.h",
    "filtering_configuration_bindings.cc",
    "filtering_configuration_bindings.h",
    "java_bindings_getters.h",
    "resource_classification_notifier_bindings.cc",
    "resource_classification_notifier_bindings.h",
  ]
  deps = [
    ":jni_headers",
    "//base",
    "//components/keyed_service/content:content",
  ]

  public_deps = [
    "//components/adblock/content:browser",
    "//components/adblock/core/configuration",
    "//components/adblock/core/subscription",
    "//components/prefs",
  ]
}

generate_jni("jni_headers") {
  sources = [
    "java/src/org/chromium/components/adblock/AdblockController.java",
    "java/src/org/chromium/components/adblock/FilteringConfiguration.java",
    "java/src/org/chromium/components/adblock/ResourceClassificationNotifier.java",
  ]
}

android_library("adblock_controller_java") {
  sources = [
    "java/src/org/chromium/components/adblock/AdblockContentType.java",
    "java/src/org/chromium/components/adblock/AdblockController.java",
    "java/src/org/chromium/components/adblock/AdblockCounters.java",
    "java/src/org/chromium/components/adblock/ContentType.java",
    "java/src/org/chromium/components/adblock/FilteringConfiguration.java",
    "java/src/org/chromium/components/adblock/ResourceClassificationNotifier.java",
    "java/src/org/chromium/components/adblock/ResourceFilteringCounters.java",
  ]

  srcjar_deps = [ ":jni_headers" ]
  deps = [
    "//base:base_java",
    "//base:jni_java",
    "//third_party/androidx:androidx_annotation_annotation_java",
  ]

  resources_package = "org.chromium.components.adblock.controller"
}

### Android UI module start
android_library("adblock_ui_java") {
  sources = [
    "java/src/org/chromium/components/adblock/settings/AdblockAllowedDomainsFragment.java",
    "java/src/org/chromium/components/adblock/settings/AdblockCustomFilterListsFragment.java",
    "java/src/org/chromium/components/adblock/settings/AdblockCustomFiltersFragment.java",
    "java/src/org/chromium/components/adblock/settings/AdblockCustomItemFragment.java",
    "java/src/org/chromium/components/adblock/settings/AdblockFilterListsAdapter.java",
    "java/src/org/chromium/components/adblock/settings/AdblockFilterListsFragment.java",
    "java/src/org/chromium/components/adblock/settings/AdblockMoreOptionsFragment.java",
    "java/src/org/chromium/components/adblock/settings/AdblockSettingsFragment.java",
  ]

  deps = [
    ":adblock_controller_java",
    ":java_ui_resources",
    "//base:base_java",
    "//base:jni_java",
    "//build/android:build_java",
    "//chrome/browser/preferences:java",
    "//chrome/browser/profiles/android:java",
    "//components/browser_ui/settings/android:java",
    "//components/prefs/android:java",
    "//components/user_prefs/android:java",
    "//content/public/android:content_full_java",
    "//third_party/androidx:androidx_fragment_fragment_java",
    "//third_party/androidx:androidx_preference_preference_java",
  ]

  resources_package = "org.chromium.components.adblock"
}

android_resources("java_ui_resources") {
  sources = [
    "java/res/drawable-hdpi/fragment_adblock_custom_item_add.png",
    "java/res/drawable-hdpi/fragment_adblock_custom_item_remove.png",
    "java/res/drawable-mdpi/fragment_adblock_custom_item_add.png",
    "java/res/drawable-mdpi/fragment_adblock_custom_item_remove.png",
    "java/res/drawable-night-hdpi/fragment_adblock_custom_item_add.png",
    "java/res/drawable-night-hdpi/fragment_adblock_custom_item_remove.png",
    "java/res/drawable-night-mdpi/fragment_adblock_custom_item_add.png",
    "java/res/drawable-night-mdpi/fragment_adblock_custom_item_remove.png",
    "java/res/drawable-night-xhdpi/fragment_adblock_custom_item_add.png",
    "java/res/drawable-night-xhdpi/fragment_adblock_custom_item_remove.png",
    "java/res/drawable-night-xxhdpi/fragment_adblock_custom_item_add.png",
    "java/res/drawable-night-xxhdpi/fragment_adblock_custom_item_remove.png",
    "java/res/drawable-xhdpi/fragment_adblock_custom_item_add.png",
    "java/res/drawable-xhdpi/fragment_adblock_custom_item_remove.png",
    "java/res/drawable-xxhdpi/fragment_adblock_custom_item_add.png",
    "java/res/drawable-xxhdpi/fragment_adblock_custom_item_remove.png",
    "java/res/layout/adblock_custom_item.xml",
    "java/res/layout/adblock_custom_item_settings.xml",
    "java/res/layout/adblock_filter_lists_list_item.xml",
    "java/res/xml/adblock_more_options.xml",
    "java/res/xml/adblock_preferences.xml",
  ]

  deps = [ ":adblock_strings_grd" ]
}

java_strings_grd("adblock_strings_grd") {
  grd_file = "adblock_strings.grd"
  outputs = [ "values/adblock_strings.xml" ] +
            process_file_template(
                android_bundle_locales_as_resources,
                [ "values-{{source_name_part}}/adblock_strings.xml" ])
}

### Android UI module end

android_library("adblock_java_tests_base") {
  testonly = true
  sources = [
    "javatests/src/org/chromium/components/adblock/AdblockControllerTestBase.java",
    "javatests/src/org/chromium/components/adblock/FilteringConfigurationTestBase.java",
    "javatests/src/org/chromium/components/adblock/TestAdBlockedObserver.java",
    "javatests/src/org/chromium/components/adblock/TestPagesCircumventionTestBase.java",
    "javatests/src/org/chromium/components/adblock/TestPagesCspTestBase.java",
    "javatests/src/org/chromium/components/adblock/TestPagesElemhideEmuInvTestBase.java",
    "javatests/src/org/chromium/components/adblock/TestPagesElemhideEmuTestBase.java",
    "javatests/src/org/chromium/components/adblock/TestPagesElemhideTestBase.java",
    "javatests/src/org/chromium/components/adblock/TestPagesExceptionTestBase.java",
    "javatests/src/org/chromium/components/adblock/TestPagesFilterTestBase.java",
    "javatests/src/org/chromium/components/adblock/TestPagesHeaderFilterTestBase.java",
    "javatests/src/org/chromium/components/adblock/TestPagesHelperBase.java",
    "javatests/src/org/chromium/components/adblock/TestPagesRewriteTestBase.java",
    "javatests/src/org/chromium/components/adblock/TestPagesSiteKeyTestBase.java",
    "javatests/src/org/chromium/components/adblock/TestPagesSnippetsTestBase.java",
    "javatests/src/org/chromium/components/adblock/TestPagesWebsocketTestBase.java",
    "javatests/src/org/chromium/components/adblock/TestResourceFilteringObserver.java",
    "javatests/src/org/chromium/components/adblock/TestVerificationUtils.java",
  ]
  deps = [
    ":adblock_controller_java",
    "//base:base_java",
    "//base:base_java_test_support",
    "//content/public/android:content_full_java",
    "//content/public/test/android:content_java_test_support",
    "//net/android:net_java_test_support",
    "//third_party/androidx:androidx_test_monitor_java",
    "//third_party/androidx:androidx_test_runner_java",
    "//third_party/junit:junit",
  ]
}
